--- a/public/html/homepage.html
+++ b/public/html/homepage.html
@@ -70,7 +70,7 @@
             <form id="cropForm" class="mb-4">
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="costCultivation">Cost of Cultivation (₹):</label>
+                        <label for="costCultivation">Cost of Cultivation (R):</label>
                         <input type="number" class="form-control" id="costCultivation" placeholder="e.g., 15000" required>
                     </div>
                     <div class="form-group col-md-4">
@@ -127,45 +127,44 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        document.getElementById('cropForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
+document.getElementById('cropForm').addEventListener('submit', async function(event) {
+    event.preventDefault();
 
-            const cropData = {
-                CostCultivation: parseFloat(document.getElementById('costCultivation').value),
-                Production: parseFloat(document.getElementById('production').value),
-                Yield: parseFloat(document.getElementById('yield').value),
-                Temperature: parseFloat(document.getElementById('temperature').value),
-                RainFallAnnual: parseFloat(document.getElementById('rainFallAnnual').value),
-                Region: document.getElementById('region').value,
-                Crop: document.getElementById('crop').value,
-                RegionalDemand: document.getElementById('regionalDemand').value,
-            };
+    const cropData = {
+        CostCultivation: parseFloat(document.getElementById('costCultivation').value),
+        Production: parseFloat(document.getElementById('production').value),
+        Yield: parseFloat(document.getElementById('yield').value),
+        Temperature: parseFloat(document.getElementById('temperature').value),
+        RainFallAnnual: parseFloat(document.getElementById('rainFallAnnual').value),
+        Region: document.getElementById('region').value,
+        Crop: document.getElementById('crop').value,
+        RegionalDemand: document.getElementById('regionalDemand').value,
+    };
 
-            try {
-                const response = await fetch('/predict/predict', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(cropData)
-                });
-
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-
-                const data = await response.json();
-                document.getElementById('result').innerHTML = `
-                    <p>Predicted Price: ₹${data.predictedPrice.toFixed(2)}</p>
-                    <p>Price Trend: ${data.priceTrend}</p>
-                    <p>Recommendation: ${data.recommendation}</p>
-                    <p>Confidence Score: ${(data.confidenceScore * 100).toFixed(2)}%</p>
-                `;
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('result').innerHTML = 'Error in prediction. Please check your inputs.';
-            }
+    try {
+        const response = await fetch('/predict/predict', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(cropData)
         });
+
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+
+        const predictionResult = await response.json();
+        // Redirect to Prediction Results Page with data as URL params
+        const params = new URLSearchParams(predictionResult).toString();
+        window.location.href = `/prediction-results?${params}`;
+       
+    } catch (error) {
+        console.error('Error:', error);
+        document.getElementById('result').innerHTML = 'Error in prediction. Please check your inputs.';
+    }
+});
+
     </script>
 </body>
 </html>
